# server_encoder

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
assets/: da_custom_single.json  da_default_single.json  df_custom_multi_window.json  df_default_single.json  l_shaped_multi.json  l_shaped_room.json  long_room.json  wide_room.json
deployment/: deploy-docker.sh  deploy.sh  docker-compose.yml
docs/: DIRECTION_ANGLE_ENDPOINT.md  README.md  ROOM_MASK_FEATURE.md  api_reference.md  encoding_schemes.md  index.md  request_schema.md
docs/overrides/: main.html
docs_internal/: encoding_logic.md
example/: calculate_direction_angle_example.py  demo.ipynb  utils.py  validation_example.py
grasshopper/: gh_obstruction_test.py
scripts/: generate_training_data.py  gh_server_viewer.py  s3_download.py  validate_alignment.py  visualize_encoding.py
src/: main.py
src/components/: encoders.py  encoding_service.py  enums.py  geometry.py  graphics_constants.py  image_builder.py  interfaces.py  parameter_calculators.py  parameter_validators.py  region_encoders.py
tests/: __init__.py  test_background.py  test_border_enforcement.py  test_direction_angle_endpoint.py  test_direction_angle_fix.py  test_hsv_defaults.py  test_model_type_version.py  test_obstruction_bar.py  test_parameter_clipping.py  test_roof_calculation.py  test_room.py  test_user_example.py  test_window.py  test_window_border_validation.py  test_window_calculators.py  test_window_height_validation.py
(+132 files in other folders)
