[tool.poetry]
name = "room-encoder-server"
version = "1.0.0"
description = "Encode room geometry and parameters into images for daylight prediction models"
authors = ["stasja fedorova <stasja.fedorova@upskiller.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
flask = "^3.0.0"
flask-cors = "^4.0.0"
werkzeug = "^3.0.0"

# Scientific computing
numpy = "^1.24.0"
opencv-python-headless = "^4.8.0"
shapely = "^2.0.0"

# HTTP client
requests = "^2.32.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
coverage = "6.5.0"
pyfakefs = "5.7.4"
mypy = "1.14.0"
ruff = "0.9.4"
pre-commit = "3.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
mkdocstrings-python = "1.10.9"


[tool.poetry.scripts]


[[tool.poetry.source]]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["import-untyped", "no-any-return"]
explicit_package_bases = true

[tool.ruff]
[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["Upskiller-torch"]